# dtrt

./: .gitignore  CMakeLists.txt  README.md  install.sh  setup.py
examples/camera_pose/: adam_iter0.pt  optimize.py  scene.xml
examples/glass_1/: optimize.py  scene.xml
examples/glass_1/cvg_results/: loss.txt  param.txt
examples/multilayer/: front_view.xml  optimize.py  top_view.xml
examples/shadow_1/: cbox.xml  cbox_side.xml  optimize.py  side_view.py
examples/shadow_2/: diff_view.xml  optimize.py  shadow.xml  side_view.py
include/: aabb.h  bsdf.h  camera.h  config.h  edge_manager.h  emitter.h  frame.h  frameAD.h  fwd.h  integrator.h  integratorAD.h  intersection.h  intersectionAD.h  line_clip.h  math_func.h  medium.h  phase.h  pmf.h  ptr.h  ray.h  rayAD.h  sampler.h  scene.h  shape.h  simpleAD.h  stats.h  utils.h
pydrt/: area_light.py  auto_grad.py  bsdf.py  camera.py  load_mitsuba.py  load_obj.py  medium.py  phase.py  scene.py  scene_manager.py  scene_renderer.py
pydtrt/: __init__.py  area_light.py  auto_grad.py  bsdf.py  camera.py  load_mitsuba.py  load_obj.py  medium.py  phase.py  scene.py  scene_manager.py  scene_renderer.py  shape.py  transform.py
pyvredner/: auto_grad.py  bsdf.py  camera.py  image.py  load_mitsuba.py  load_obj.py  medium.py  phase.py  scene_manager.py  scene_renderer.py  shape.py  transform.py
src/: bsdf.cpp  camera.cpp  drt.cpp  dtrt.cpp  math_func.cpp  sampler.cpp  scene.cpp  shape.cpp  stats.cpp  utils.cpp  vredner.cpp
src/bsdf/: diffuse.cpp  diffuse.h  microfacet.h  null.cpp  null.h  phong.cpp  phong.h  roughdielectric.cpp  roughdielectric.h
src/edge_manager/: bruteforce.cpp  bruteforce.h  edge_manager.cpp  tree.cpp  tree.h
src/emitter/: area.cpp  area.h  area2.cpp  area2.h
src/integrator/: direct.cpp  direct.h  path.cpp  path.h  ptracer.cpp  ptracer.h  volpath.cpp  volpath.h  volpath_simple.cpp  volpath_simple.h
src/integrator/differential/: directAD.cpp  directAD.h  integratorAD.cpp  pathAD.cpp  pathAD.h  volpathAD.cpp  volpathAD.h
src/medium/: gridvolume.h  heterogeneous.cpp  heterogeneous.h  homogeneous.cpp  homogeneous.h
src/unit_test/: ad_test.cpp  ad_test.h  edge_test.cpp  edge_test.h  edge_test0.cpp  edge_test0.h  volume_test.cpp  volume_test.h
